--- a/index.html
+++ b/index.html
@@ -4,67 +4,129 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fatima & Wasay | Wedding Invitation</title>
-    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300;500&family=Playfair+Display:ital,wght@0,400;1,600&family=Montserrat:wght@200;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@200;400;600&display=swap" rel="stylesheet">
     <style>
-        :root { --gold: #c5a059; --dark-grey: #2c2c2c; --off-white: #fdfdfd; }
-        body { margin: 0; font-family: 'Cormorant Garamond', serif; background-color: var(--off-white); color: var(--dark-grey); text-align: center; scroll-behavior: smooth; }
-        header { height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center; background: linear-gradient(rgba(255,255,255,0.7), rgba(255,255,255,0.7)), url('https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&q=80&w=2070') center/cover; padding: 20px; }
-        .logo { font-family: 'Playfair Display', serif; font-size: 5rem; color: var(--gold); margin: 0; letter-spacing: 10px; }
-        .names { font-size: 2.5rem; margin: 10px 0; font-weight: 300; }
-        .subtitle { font-family: 'Montserrat', sans-serif; text-transform: uppercase; letter-spacing: 3px; font-size: 0.9rem; }
-        #countdown { display: flex; gap: 20px; margin-top: 30px; }
-        .timer-box { font-family: 'Montserrat', sans-serif; background: rgba(197, 160, 89, 0.1); padding: 15px; min-width: 60px; border-radius: 4px; }
-        .timer-box span { font-size: 1.5rem; display: block; color: var(--gold); }
-        .section { padding: 80px 20px; max-width: 900px; margin: auto; }
-        h2 { font-family: 'Playfair Display', serif; font-size: 2.5rem; border-bottom: 1px solid var(--gold); display: inline-block; padding-bottom: 10px; }
-        .event-card { margin: 40px 0; padding: 30px; border: 1px solid #eee; transition: 0.3s; }
-        .event-card:hover { box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
-        .event-title { font-size: 2rem; color: var(--gold); margin-bottom: 5px; }
-        .location { font-family: 'Montserrat', sans-serif; font-size: 0.8rem; color: #777; margin-bottom: 20px; }
-        form { display: flex; flex-direction: column; gap: 15px; max-width: 500px; margin: auto; text-align: left; }
-        input, select, textarea { padding: 12px; border: 1px solid #ccc; font-family: 'Montserrat', sans-serif; }
-        button { background: var(--gold); color: white; border: none; padding: 15px; cursor: pointer; text-transform: uppercase; letter-spacing: 2px; }
-        footer { padding: 40px; font-size: 0.8rem; opacity: 0.6; }
+        :root { --gold: #c5a059; --dark: #1a1a1a; --white: #ffffff; --cream: #fdfaf5; --rose: #f9f0f0; }
+        * { box-sizing: border-box; margin: 0; padding: 0; }
+        body { font-family: 'Montserrat', sans-serif; background-color: var(--white); color: var(--dark); overflow-x: hidden; }
+
+        /* OPENING CARD */
+        #opening-card {
+            position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+            background-color: var(--cream); display: flex; justify-content: center; align-items: center;
+            z-index: 9999; transition: transform 1.2s cubic-bezier(0.7, 0, 0.3, 1); text-align: center;
+        }
+        .card-content { border: 2px solid var(--gold); padding: 80px 50px; background: white; box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
+        .card-logo { font-family: 'Playfair Display', serif; font-size: 5rem; color: var(--gold); letter-spacing: 12px; margin-bottom: 20px; }
+        .open-btn { margin-top: 30px; padding: 18px 50px; background: var(--gold); color: white; border: none; text-transform: uppercase; letter-spacing: 4px; cursor: pointer; transition: 0.4s; font-size: 0.8rem; }
+        .hide-card { transform: translateY(-100%); }
+
+        /* HERO SECTION */
+        .hero {
+            height: 100vh; display: flex; flex-direction: column; justify-content: center; align-items: center;
+            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1519741497674-611481863552?auto=format&fit=crop&q=80') center/cover;
+            color: white; text-align: center; padding: 20px;
+        }
+        .hero h1 { font-family: 'Playfair Display', serif; font-size: clamp(3.5rem, 10vw, 7rem); letter-spacing: 15px; }
+        .hero h2 { font-family: 'Playfair Display', serif; font-style: italic; font-weight: 400; font-size: 1.8rem; margin: 20px 0; }
+
+        /* COUNTDOWN */
+        .countdown { display: flex; gap: 25px; margin-top: 40px; }
+        .timer-box { background: rgba(255, 255, 255, 0.15); backdrop-filter: blur(10px); padding: 20px; border: 1px solid rgba(255,255,255,0.4); min-width: 90px; }
+        .timer-box span { display: block; font-size: 2.2rem; font-family: 'Playfair Display', serif; }
+        .timer-box label { font-size: 0.7rem; text-transform: uppercase; letter-spacing: 2px; }
+
+        /* DIFFERENTLY DESIGNED CARDS */
+        .section { padding: 100px 20px; max-width: 1200px; margin: auto; text-align: center; }
+        .section-title { font-family: 'Playfair Display', serif; font-size: 3rem; color: var(--gold); margin-bottom: 60px; }
+
+        .event-container { display: flex; flex-wrap: wrap; gap: 40px; justify-content: center; }
+        
+        /* Card Style 1: Classic Elegance (Shendi) */
+        .card-shendi { 
+            flex: 1; min-width: 320px; max-width: 500px; padding: 60px 40px; 
+            background: var(--cream); border-radius: 50% 50% 0 0; border: 1px solid #e0d5c1;
+        }
+        
+        /* Card Style 2: Modern Minimalist (Valima) */
+        .card-valima { 
+            flex: 1; min-width: 320px; max-width: 500px; padding: 60px 40px; 
+            background: var(--rose); border-left: 5px solid var(--gold); box-shadow: 10px 10px 0px rgba(179, 142, 68, 0.1);
+        }
+
+        .event-type { font-family: 'Playfair Display', serif; font-size: 2.5rem; color: var(--gold); margin-bottom: 20px; }
+        .map-btn { 
+            display: inline-block; margin-top: 25px; padding: 12px 25px; 
+            border: 1px solid var(--gold); color: var(--gold); text-decoration: none; 
+            font-size: 0.75rem; letter-spacing: 2px; text-transform: uppercase; transition: 0.3s;
+        }
+        .map-btn:hover { background: var(--gold); color: white; }
+
+        /* RSVP */
+        form { max-width: 600px; margin: 40px auto; text-align: left; }
+        input, select, textarea { width: 100%; padding: 15px; margin: 10px 0 25px; border: 1px solid #ddd; font-family: inherit; }
+        .btn-submit { width: 100%; padding: 20px; background: var(--gold); color: white; border: none; letter-spacing: 4px; cursor: pointer; text-transform: uppercase; }
+
+        footer { padding: 80px 20px; background: var(--dark); color: rgba(255,255,255,0.5); text-align: center; letter-spacing: 3px; font-size: 0.8rem; }
     </style>
 </head>
 <body>
-    <header>
-        <div class="logo">WaFa</div>
-        <div class="names">Fatima & Wasay</div>
-        <div class="subtitle">Together we begin our forever</div>
-        <div id="countdown">
-            <div class="timer-box"><span id="days">00</span>Days</div>
-            <div class="timer-box"><span id="hours">00</span>Hrs</div>
-            <div class="timer-box"><span id="mins">00</span>Mins</div>
+
+    <div id="opening-card">
+        <div class="card-content">
+            <p style="letter-spacing: 5px; text-transform: uppercase; font-size: 0.7rem; margin-bottom: 10px;">The Wedding Invitation of</p>
+            <div class="card-logo">WaFa</div>
+            <p style="font-family: 'Playfair Display', serif; font-style: italic; font-size: 1.4rem;">Fatima Sami & Wasay</p>
+            <button class="open-btn" onclick="openInvitation()">Open Invitation</button>
         </div>
-    </header>
-    <section class="section">
-        <h2>The Celebration</h2>
-        <div class="event-card">
-            <div class="event-title">Shendi</div>
-            <p><strong>Sunday, 29th March 2026</strong></p>
-            <p class="location">Grand Classic Marquee, Bahria Town, Rawalpindi</p>
-            <p>Nikkah: 7:00 PM <br> Dinner: 8:00 PM</p>
-        </div>
-        <div class="event-card">
-            <div class="event-title">Valima</div>
-            <p><strong>Saturday, 4th April 2026</strong></p>
-            <p class="location">Marabelle by Zafar Group, Lahore Garrison</p>
-            <p>Dinner: 7:00 PM</p>
+    </div>
+
+    <section class="hero">
+        <h1 class="wafa-logo">WaFa</h1>
+        <h2>"Together, we begin our forever."</h2>
+        <div class="countdown">
+            <div class="timer-box"><span id="days">00</span><label>Days</label></div>
+            <div class="timer-box"><span id="hours">00</span><label>Hours</label></div>
+            <div class="timer-box"><span id="mins">00</span><label>Mins</label></div>
         </div>
     </section>
-    <section class="section" style="background-color: #f9f9f9;">
-        <h2>RSVP Kindly</h2>
-        <form id="rsvpForm">
-            <input type="text" placeholder="Your Full Name" required>
-            <select><option>Joyfully Accept</option><option>Regrettably Decline</option></select>
-            <select><option>Both Events</option><option>Shendi Only</option><option>Valima Only</option></select>
-            <textarea rows="4" placeholder="Message for the Couple"></textarea>
-            <button type="submit">Submit Reply</button>
+
+    <section class="section">
+        <h2 class="section-title">The Celebration</h2>
+        <div class="event-container">
+            <div class="card-shendi">
+                <h3 class="event-type">Shendi</h3>
+                <p style="font-weight: 600; letter-spacing: 2px;">29 MARCH 2026</p>
+                <p style="margin: 15px 0; color: #666;">Grand Classic Marquee, <br>Bahria Town, Rawalpindi</p>
+                <p>Nikkah: 7:00 PM <br> Dinner: 8:00 PM</p>
+                <a href="https://maps.app.goo.gl/9Q6t9K6mN9UfVfVf7" target="_blank" class="map-btn">View on Google Maps</a>
+            </div>
+
+            <div class="card-valima">
+                <h3 class="event-type">Valima</h3>
+                <p style="font-weight: 600; letter-spacing: 2px;">4 APRIL 2026</p>
+                <p style="margin: 15px 0; color: #666;">Marabelle by Zafar Group, <br>Lahore Garrison</p>
+                <p>Dinner: 7:00 PM</p>
+                <a href="https://maps.app.goo.gl/vL7XJ7K7XJ7XJ7XJ7" target="_blank" class="map-btn">View on Google Maps</a>
+            </div>
+        </div>
+    </section>
+
+    <section class="section" style="background: #fdfdfd;">
+        <h2 class="section-title">RSVP</h2>
+        <form action="https://formspree.io/f/your-id" method="POST">
+            <label style="font-size: 0.7rem; letter-spacing: 2px; font-weight: 600; text-transform: uppercase;">Your Name</label>
+            <input type="text" name="name" required>
+            <label style="font-size: 0.7rem; letter-spacing: 2px; font-weight: 600; text-transform: uppercase;">Are you attending?</label>
+            <select name="attendance"><option>Joyfully Accept</option><option>Regrettably Decline</option></select>
+            <button type="submit" class="btn-submit">Submit Response</button>
         </form>
     </section>
-    <footer>© 2026 Fatima & Wasay | Created with love.</footer>
+
+    <footer>© 2026 FATIMA & WASAY | RAWLPINDI • LAHORE</footer>
+
     <script>
+        function openInvitation() { document.getElementById('opening-card').classList.add('hide-card'); }
         const weddingDate = new Date("March 29, 2026 19:00:00").getTime();
         setInterval(function() {
             const now = new Date().getTime();
